registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: registry
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: registry-ui
